# ADV_Games_

./: .gitignore  CMakeLists.txt  Diary.docx  Entity_Development_Test.txt  LICENSE  README.md  Ryan_Entity_Feature_Test.txt
01-object-construction/: object_construction.cpp
02a-pimpl/: pimpl.cpp
02b-pimpl-poly/: pimpl.cpp
02c-better-pimpl-poly/: pimpl.cpp
03-smart-pointers/: smart.cpp
04-raii/: raii.cpp
05-entity-component/: ai_component.h  component.h  entity.h  main.cpp  physics_component.h  render_component.h
06-concept-model/: ai_component.h  component.h  entity.h  main.cpp  physics_component.h  render_component.h
07-singleton/: main.cpp  renderer.h  singleton.h
08-factory/: factory.h  generic_factory.h  main.cpp  main2.cpp  physics_system.h
09-data-driven/: main.cpp  physics_system.h  renderer.h
10-state/: enemy.h  main.cpp  state_machine.h
11-messaging/: main.cpp  messenger.h
98-engine-simple/: component.h  engine.h  engine_states.h  entity.h  entity_manager.h  input_handler.h  main.cpp  physics_system.h  renderer.h  state_machine.h  subsystem.h
99-engine/: component.h  engine.h  entity.h  entity_manager.h  factory.h  input_handler.h  main.cpp  physics_system.h  renderer.h  singleton.h  state_machine.h  subsystem.h
adv-games-dev/: Camera_System.cpp  Camera_System.h  Controls.cpp  Enemy_System.h  GameOver.cpp  Menu.cpp  OpenGlRender.cpp  OpenGlRender.h  Options.cpp  Player_System.h  PowerUp_System.h  Projectile_System.h  Resolution.cpp  SoundSystem.h  Spawn_System.h  ai_system.h  component.h  engine.h  entity.cpp  entity.h  entity_manager.h  input_handler.h  main.cpp  physics_system.h  renderer.h  state_machine.h  subsystem.h
include/: SDL_main.h
shader/: basic.frag
